--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -42,6 +42,7 @@
     <None Include="project.json" />
     <Compile Include="SyntaxTree\Abstract\BlockOfAssemblerStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\BlockOfStatements.cs" />
+    <Compile Include="SyntaxTree\Abstract\BlockWithDeclarations.cs" />
     <Compile Include="SyntaxTree\Abstract\CombinedSymbolTableBase.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbolGroup.cs" />
     <Compile Include="SyntaxTree\Abstract\ExportedMethodDeclaration.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="SyntaxTree\Abstract\MethodDirectiveKind.cs" />
     <Compile Include="SyntaxTree\Abstract\MethodDirectiveSpecifier.cs" />
     <Compile Include="SyntaxTree\Abstract\MethodDirectiveSpecifierKind.cs" />
+    <Compile Include="SyntaxTree\Abstract\MethodImplementation.cs" />
     <Compile Include="SyntaxTree\Abstract\ParameterTypeDefinition.cs" />
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
