added directives in test case

--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -52,6 +52,7 @@
     <Compile Include="SyntaxTree\Abstract\GlobalMethod.cs" />
     <Compile Include="SyntaxTree\Abstract\IBlockTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\IDeclaredSymbolTarget.cs" />
+    <Compile Include="SyntaxTree\Abstract\IDirectiveTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\IExpression.cs" />
     <Compile Include="SyntaxTree\Abstract\ILabelTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\IStatementTarget.cs" />
