--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DictionaryIndexHelper.cs" />
     <Compile Include="Utils\StringUtils.cs" />
+    <Compile Include="Utils\VariousExtensions.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
