--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -166,6 +166,7 @@
     <Compile Include="SyntaxTree\Standard\GenericNamespaceName.cs" />
     <Compile Include="SyntaxTree\Standard\IStructuredTypeMember.cs" />
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
+    <Compile Include="SyntaxTree\Standard\MethodDeclarationName.cs" />
     <Compile Include="SyntaxTree\Standard\Parameter.cs" />
     <Compile Include="SyntaxTree\Standard\RecordDeclarationMode.cs" />
     <Compile Include="SyntaxTree\Standard\RecordItem.cs" />
