--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Log\MessageSeverity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DictionaryIndexHelper.cs" />
+    <Compile Include="Utils\IndexedQueue.cs" />
+    <Compile Include="Utils\ListBase.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\VariousExtensions.cs" />
   </ItemGroup>
