--- a/Paspaspas.Options/PasPasPas.Options.csproj
+++ b/Paspaspas.Options/PasPasPas.Options.csproj
@@ -1,152 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{677A19C0-B2D4-4153-8DC9-0713C7193ECE}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PasPasPas.Options</RootNamespace>
-    <AssemblyName>PasPasPas.Options</AssemblyName>
-    <DefaultLanguage>de-DE</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+    <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\PasPasPas.Options.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>..\PasPasPas.Ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <LangVersion>6</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
+
   <ItemGroup>
-    <None Include="project.json" />
-    <!-- A reference to the entire .NET Framework is automatically included -->
+    <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Bundles\IOptionSet.cs" />
-    <Compile Include="DataTypes\Alignment.cs" />
-    <Compile Include="DataTypes\AppType.cs" />
-    <Compile Include="DataTypes\AssertionMode.cs" />
-    <Compile Include="DataTypes\BooleanEvaluation.cs" />
-    <Compile Include="DataTypes\CodeAlignment.cs" />
-    <Compile Include="DataTypes\CompileOptions.cs" />
-    <Compile Include="DataTypes\CompilerHints.cs" />
-    <Compile Include="Bundles\CompilerOptions.cs" />
-    <Compile Include="DataTypes\CompilerOptmization.cs" />
-    <Compile Include="DataTypes\CompilerWarnings.cs" />
-    <Compile Include="DataTypes\ConditionalCompilationOptions.cs" />
-    <Compile Include="DataTypes\ConditionBranch.cs" />
-    <Compile Include="DataTypes\ConditionRoot.cs" />
-    <Compile Include="DataTypes\ConditonalDefine.cs" />
-    <Compile Include="DataTypes\ConstantValues.cs" />
-    <Compile Include="DataTypes\DebugInformation.cs" />
-    <Compile Include="DataTypes\DenyUnitInPackages.cs" />
-    <Compile Include="DataTypes\DerivedListOption.cs" />
-    <Compile Include="DataTypes\DerivedOptionBase.cs" />
-    <Compile Include="DataTypes\DerivedValueOption.cs" />
-    <Compile Include="DataTypes\DesignOnlyUnit.cs" />
-    <Compile Include="DataTypes\DoNotDefineInHeader.cs" />
-    <Compile Include="DataTypes\ElseCondition.cs" />
-    <Compile Include="DataTypes\EndIfMode.cs" />
-    <Compile Include="DataTypes\EnumSize.cs" />
-    <Compile Include="DataTypes\ExcessPrecisionForResults.cs" />
-    <Compile Include="DataTypes\ExportCppObjects.cs" />
-    <Compile Include="DataTypes\ExtendedCompatiblityMode.cs" />
-    <Compile Include="DataTypes\ExtendedSyntax.cs" />
-    <Compile Include="DataTypes\ExternalSymbol.cs" />
-    <Compile Include="DataTypes\FDivSaveDivide.cs" />
-    <Compile Include="DataTypes\FirstCharIndex.cs" />
-    <Compile Include="DataTypes\HeaderString.cs" />
-    <Compile Include="DataTypes\HighCharsUnicode.cs" />
-    <Compile Include="DataTypes\ICondition.cs" />
-    <Compile Include="DataTypes\IConditionBranch.cs" />
-    <Compile Include="DataTypes\IConditionRoot.cs" />
-    <Compile Include="DataTypes\IDerivedOption.cs" />
-    <Compile Include="DataTypes\IfCondition.cs" />
-    <Compile Include="DataTypes\IfDefCondition.cs" />
-    <Compile Include="DataTypes\IfOptCondition.cs" />
-    <Compile Include="DataTypes\ImplicitBuildUnit.cs" />
-    <Compile Include="DataTypes\ImportGlobalUnitData.cs" />
-    <Compile Include="DataTypes\IncludeFilePathResolver.cs" />
-    <Compile Include="DataTypes\IoCallChecks.cs" />
-    <Compile Include="DataTypes\LinkedFile.cs" />
-    <Compile Include="DataTypes\LinkedInputFileResolver.cs" />
-    <Compile Include="DataTypes\LocalDebugSymbols.cs" />
-    <Compile Include="DataTypes\LongDelphiStrings.cs" />
-    <Compile Include="DataTypes\MetaInformation.cs" />
-    <Compile Include="Bundles\OptionSet.cs" />
-    <Compile Include="Bundles\Platform.cs" />
-    <Compile Include="Bundles\PlatformKey.cs" />
-    <Compile Include="DataTypes\HppEmitMode.cs" />
-    <Compile Include="DataTypes\MethodInfoRtti.cs" />
-    <Compile Include="DataTypes\ObjectFileTypeName.cs" />
-    <Compile Include="DataTypes\OldRecordTypes.cs" />
-    <Compile Include="DataTypes\OpenDelphiStrings.cs" />
-    <Compile Include="DataTypes\PathOptionSet.cs" />
-    <Compile Include="DataTypes\PEVersion.cs" />
-    <Compile Include="DataTypes\PointerManipulation.cs" />
-    <Compile Include="DataTypes\Real48.cs" />
-    <Compile Include="DataTypes\RequireScopedEnums.cs" />
-    <Compile Include="DataTypes\ResourceFilePathResolver.cs" />
-    <Compile Include="DataTypes\ResourceReference.cs" />
-    <Compile Include="DataTypes\RttiForPublishSection.cs" />
-    <Compile Include="DataTypes\RttiForVisibility.cs" />
-    <Compile Include="DataTypes\RttiGenerationMode.cs" />
-    <Compile Include="DataTypes\RttiLinkMode.cs" />
-    <Compile Include="DataTypes\RttiOptions.cs" />
-    <Compile Include="DataTypes\RuntimeOverflowChecks.cs" />
-    <Compile Include="DataTypes\RuntimePackageMode.cs" />
-    <Compile Include="DataTypes\RuntimeRangeChecks.cs" />
-    <Compile Include="DataTypes\SearchPathResolver.cs" />
-    <Compile Include="DataTypes\ShortVarStringChecks.cs" />
-    <Compile Include="DataTypes\StackFramesGeneration.cs" />
-    <Compile Include="DataTypes\StrongTypeLinking.cs" />
-    <Compile Include="DataTypes\SwitchInfo.cs" />
-    <Compile Include="DataTypes\SymbolDefinitionInfo.cs" />
-    <Compile Include="DataTypes\SymbolReferenceInfo.cs" />
-    <Compile Include="DataTypes\TypeCheckedPointers.cs" />
-    <Compile Include="DataTypes\WarningKey.cs" />
-    <Compile Include="DataTypes\WarningMode.cs" />
-    <Compile Include="DataTypes\WarningOption.cs" />
-    <Compile Include="DataTypes\WarningOptions.cs" />
-    <Compile Include="DataTypes\WeakPackaging.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Bundles\AnyCpuPlatform.cs" />
-    <Compile Include="Bundles\DefaultPlatform.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj">
-      <Project>{4cef569a-4ece-42ee-847b-5029958f757c}</Project>
-      <Name>PasPasPas.Infrastructure</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
+
 </Project>
