refactoring visitor pattern

--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CompilerDirectives\SyntaxTree\" />
+  </ItemGroup>
+
 </Project>
