--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -5,11 +5,16 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>6</LangVersion>
+    <LangVersion>7</LangVersion>
+    <DocumentationFile>bin\Release\netstandard1.3\.xml</DocumentationFile>
+    <DefineConstants>RELEASE;NETSTANDARD1_3</DefineConstants>
+    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>True</DebugSymbols>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>6</LangVersion>
+    <LangVersion>7</LangVersion>
+    <DocumentationFile>bin\Debug\netstandard1.3\PasPasPas.Infrastructure.xml</DocumentationFile>
   </PropertyGroup>
 
 
