--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -16,7 +16,9 @@
     <!-- fix error MSB3277 -->
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.0.3" />
     <PackageReference Include="xunit" Version="2.3.0-rc2-build3812" />
+    <PackageReference Include="xunit.runner.console" Version="2.3.0-rc2-build3812" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-rc2-build3812" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-rc2-build3812" />
   </ItemGroup>
 
   <ItemGroup>
