changed travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: chsharp
 solution: paspaspas.sln
 mono: none
 dotnet: 2.0.0
+dist: trusty
 script:
  - dotnet restore
  - cd PasPasPasTests
