--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ dotnet: 2.0.0
 dist: trusty
 script:
  - dotnet restore
- - cd PasPasPasTests
- - dotnet xunit
+ - cd PasPasPas-Tests
+ - mkdir artifacts --parents
+ - dotnet xunit -xml artifacts/PasPasPas.xml -html artifacts/PasPasPas.htm 
