--- a/P3SyntaxTreeViewer/P3SyntaxTreeViewer.csproj
+++ b/P3SyntaxTreeViewer/P3SyntaxTreeViewer.csproj
@@ -109,6 +109,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PasPasPas.Api\PasPasPas.Api.csproj">
+      <Project>{CF92A709-525F-450E-858F-A6AD8EDC16BA}</Project>
+      <Name>PasPasPas.Api</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PasPasPas.DesktopPlatform\PasPasPas.DesktopPlatform.csproj">
       <Project>{8adb6566-773f-4487-8611-2d8ad5337163}</Project>
       <Name>PasPasPas.DesktopPlatform</Name>
