--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -14,10 +14,10 @@
 
   <ItemGroup>
     <!-- fix error MSB3277 -->
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.0.3" />
-    <PackageReference Include="xunit" Version="2.3.0-rc2-build3812" />
-    <PackageReference Include="xunit.runner.console" Version="2.3.0-rc2-build3812" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-rc2-build3812" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.0.0" />
+    <PackageReference Include="xunit" Version="2.3.0" />
+    <PackageReference Include="xunit.runner.console" Version="2.3.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-rc2-build3812" />
   </ItemGroup>
 
