--- a/PasPasPas.Typings/PasPasPas.Typings.csproj
+++ b/PasPasPas.Typings/PasPasPas.Typings.csproj
@@ -14,5 +14,9 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
+  </ItemGroup>
+
 
 </Project>
