--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../Common.targets" />
+
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>$(PasPasPasTargetFramework)</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>7.1</LangVersion>
-    <DocumentationFile>bin\Release\netstandard1.4\.xml</DocumentationFile>
-    <DefineConstants>RELEASE;NETSTANDARD1_3</DefineConstants>
-    <DebugType>pdbonly</DebugType>
-    <DebugSymbols>True</DebugSymbols>
+    <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
+    <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\infa.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>7.1</LangVersion>
-    <DocumentationFile>bin\Debug\netstandard1.4\PasPasPas.Infrastructure.xml</DocumentationFile>
+    <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
+    <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\infa.xml</DocumentationFile>
   </PropertyGroup>
+
 
 </Project>
