--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Global.csproj" />
     <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
     <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
   </ItemGroup>
